--- a/catalog.html
+++ b/catalog.html
@@ -191,16 +191,15 @@
     </main>
     <footer class="catalog-footer">
       <div class="map">
-        <div class="container clearfix">
-          <div class="address">
-            <h4>Nёrds design studio</h4>
-            <p>191186, Санкт-Петербург,<br>
-               ул. Б. Конюшенная, д. 19/8<br>
-               <br>
-               тел. +7 (812) 275-75-75
-            </p>
-            <a class="btn" href="#">Напишите нам</a>
-          </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5833949968173!2d30.320722954518185!3d59.93905483636798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1479521584817" width="100%" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="address">
+          <h4>Nёrds design studio</h4>
+          <p>191186, Санкт-Петербург,<br>
+             ул. Б. Конюшенная, д. 19/8<br>
+             <br>
+             тел. +7 (812) 275-75-75
+          </p>
+          <a class="btn js-hidden-form" href="#">Напишите нам</a>
         </div>
         <div class="hidden-form">
           <b>Напишите нам</b>
@@ -208,12 +207,12 @@
           <form action="/echo" method="post">
             <label for="name-field">Ваше имя:</label>
             <label for="mail-field">Ваш e-mail:</label>
-            <input class="your-name" type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
-            <input class="your-mail" type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
+            <input class="your-name" type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста" required>
+            <input class="your-mail" type="text" name="mail" id="mail-field" placeholder="Для отправки ответа" required>
             <label for="comment-field">Текст письма:</label>
-            <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
+            <textarea name="comment" id="comment-field" placeholder="В свободной форме" required></textarea>
+            <button class="btn" type="submit">Отправить</button>
           </form>
-          <button class="btn" type="button">Отправить</button>
         </div>
       </div>
       <div class="container clearfix">
@@ -228,5 +227,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/form.js"></script>
   </body>
 </html>
